# Osmotic-Pressure-OpenMM

./: README.md  pyproject.toml
examples/: simple.py
examples/gas_phase/: argon.xml
examples/gas_phase/cylinder/: run.py
examples/gas_phase/slab/: run.py
examples/gas_phase/sphere/: run.py
src/OPO.egg-info/: PKG-INFO  SOURCES.txt
src/opo/: __init__.py  gcmd.py  geometry.py  io.py  osmotic_reporter.py
