[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "OPO"
authors = [
    {name = "Paolo Raiteri", email = "p.raiteri@curtin.edu.au"},
    {name = "Blake I. Armstrong", email = "blakearmstrong21@gmail.com"},
]
description = "Custom OpenMM Reporter for maintaining constant osmotic pressure"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["omsotic", "pressure","OpenMM"]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
]
dynamic = ["version"]

[tool.setuptools_scm]
